# VRCSM

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MEMORY.md  README.md  build_ps.ps1  build_release.bat  package_release.ps1  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-win.yml  ci.yml  pages.yml
cmake/: sync-plugins.cmake  sync-web-dist.cmake
docs/: AVATAR-PREVIEW-UNPACKING-RESEARCH.md  BEAT-VRCX-PLAN.md  CACHE-ARCHITECTURE.md  ENHANCEMENT-ROADMAP.md  FRIENDS-PAGE-OPTIMIZATION-PLAN.md  FRIENDS-RELATIONSHIP-REDESIGN-RESEARCH.md  GLOBAL-SEARCH-SPEC.md  MD-INDEX.md  NEXT-AGENT-HANDOFF.md  NOW-PLAYING-OSC-PLAN.md  OSC-STUDIO-PLAN.md  SURPASS-VRCX-MASTER-PLAN.md  SURPASS-VRCX-WAVE2-SPEC.md  UI-REPAIR-VRCX-PARITY-PLAN.md  VRCSM-PLAN.md  release-v0.14.6.md  unity-ide-skeleton.md  v0.2.0-auth-findings.md  v0.5.0-3d-preview-research.md  vrc-settings-keys.md
docs/gh-pages/: hw-profiles.json  index.html  plugins.json  script.js  style.css
docs/gh-pages/plugins/: hello-1.0.0.vrcsmplugin  vrc-auto-uploader-0.9.0.vrcsmplugin  vrc-auto-uploader-0.9.7.vrcsmplugin
docs/reference/: 01-architecture.md  02-host-ipc-bridge.md  03-web-frontend.md  04-build-release.md  ARCHITECTURE-COMPREHENSION-2026-07.md  MAINTENANCE.md  README.md  UI-SMOKE-FINDINGS-2026-07-04.md
docs/reference/core/: README.md  api-auth-settings.md  avatar-preview-db.md  cache-and-bundle.md  hw-updater-plugins.md  log-pipeline.md  orchestration.md  realtime-integrations.md  safedelete-migrate.md
docs/reference/flows/: data-cache-lifecycle.md  ipc-roundtrip.md  plugin-security.md
docs/review-2026-07/: GUI-API-CONTRACT-AUDIT-2026-07-09.md  IPC-CONTRACT-DRIFT-2026-07.md  REVIEW-SUMMARY.md  ROBUSTNESS-MODULARITY-AUDIT-2026-07-04.md  area-build-docs.md  area-cpp-core.md  area-cpp-host-ipc.md  area-diff.md  area-web-lib.md  area-web-pages.md
docs/review-2026-07/deep/: AUDIT-VERDICT.md
docs/wave2-research/: log-max-coverage.md  own-overlap-algorithm-design.md  vrchat-api.md  vrcsm-gaps.md  vrcx-features.md  vrcx-quickwins.md  vrcx-smallfeatures-verified.md  wave3-discord-ipc.md  wave3-file-upload.md  wave3-impl-facts.md  wave3-log-signatures.md  wave3-win-toast.md
installer/: vrcsm.wxs
memory/: session-persist-diagnosis.md
plugins/hello/: index.html  manifest.json  sdk-bundle.js
plugins/vrc-auto-uploader/: README.md  index.html  main.js  manifest.json  style.css
plugins/vrc-auto-uploader/UnityScripts/: AutoUploader.cs  PopupSuppressor.cs
resources/: app.manifest  app.rc
scripts/: bool-keys.txt  build-debug.bat  build-host-local.bat  build-host.bat  build-msi.bat  deploy-host.ps1  deploy-web.bat  extract-bool-keys.ps1  extract_to_glb.py  fetch-extractors.ps1  find-installed.ps1  generate_vrc_settings_report.py  inspect-cache-entry.ps1  inspect-msi.ps1  install-msi.ps1  locate-installed.ps1  make-icon.py  purge-avatar-thumb-cache.ps1  run-extractor.ps1  sample-vrc-reg.ps1  verify-handler.ps1  verify-release-metadata.ps1
src/: CMakeLists.txt  pch.h
src/core/: AuthStore.cpp  AuthStore.h  AvatarData.cpp  AvatarData.h  AvatarIdHarvest.cpp  AvatarIdHarvest.h  AvatarPreview.cpp  AvatarPreview.h  BundleSniff.cpp  BundleSniff.h  CMakeLists.txt  CacheIndex.cpp  CacheIndex.h  CacheScanner.cpp  CacheScanner.h  Common.cpp  Common.h  Database.cpp  Database.h  Database_Analytics.cpp  Database_AssetCache.cpp  Database_Avatars.cpp  Database_Embeddings.cpp  Database_Favorites.cpp  Database_Friends.cpp  Database_History.cpp  Database_Recordings.cpp  Database_Rules.cpp  Database_internal.h  DiscordRpc.cpp  DiscordRpc.h  FriendAnalytics.cpp  FriendAnalytics.h  HttpClient.cpp  HttpClient.h  JunctionUtil.cpp  JunctionUtil.h  LogAtoms.cpp  LogAtoms.h  LogEventClassifier.cpp  (+59 more)
src/core/hw/: CMakeLists.txt  GpuProbe.cpp  GpuProbe.h  HwDetector.cpp  HwDetector.h  HwProfileFeed.cpp  HwProfileFeed.h  HwProfiler.cpp  HwProfiler.h  HwTelemetry.cpp  HwTelemetry.h
src/core/plugins/: PluginFeed.cpp  PluginFeed.h  PluginInstaller.cpp  PluginInstaller.h  PluginManifest.cpp  PluginManifest.h  PluginRegistry.cpp  PluginRegistry.h  PluginStore.cpp  PluginStore.h
src/core/updater/: CMakeLists.txt  UpdateApplier.cpp  UpdateApplier.h  UpdateChecker.cpp  UpdateChecker.h  UpdateDownloader.cpp  UpdateDownloader.h  UpdatePackage.cpp  UpdatePackage.h  UpdateState.cpp  UpdateState.h
src/host/: App.cpp  App.h  AuthLoginWindow.cpp  AuthLoginWindow.h  CMakeLists.txt  IpcBridge.cpp  IpcBridge.h  MainWindow.cpp  MainWindow.h  ScreenshotThumbs.cpp  ScreenshotThumbs.h  StringUtil.cpp  StringUtil.h  UrlProtocol.cpp  UrlProtocol.h  VrchatPaths.cpp  VrchatPaths.h  WebViewHost.cpp  WebViewHost.h  main.cpp
src/host/bridges/: ApiBridge.cpp  AuthBridge.cpp  BridgeCommon.h  CacheBridge.cpp  DatabaseBridge.cpp  EventBridge.cpp  HwBridge.cpp  LogsBridge.cpp  LyricsBridge.cpp  MigrateBridge.cpp  MusicBridge.cpp  PipelineBridge.cpp  PluginBridge.cpp  RadarBridge.cpp  RuleBridge.cpp  ScreenshotBridge.cpp  SearchBridge.cpp  SettingsBridge.cpp  ShellBridge.cpp  UpdateBridge.cpp  VectorBridge.cpp  VrDiagBridge.cpp
tests/: CMakeLists.txt  CommonTests.cpp  FriendAnalyticsTests.cpp  HttpClientTests.cpp  LyricsProxyTests.cpp  PluginManifestTests.cpp  main.cpp
tools/: build-core.bat
tools/dump_avatar_details/: CMakeLists.txt  dump_avatar_details.cpp
tools/dump_logs/: CMakeLists.txt  dump_logs.cpp
tools/dump_settings/: CMakeLists.txt  dump_settings.cpp
tools/dump_thumbnails/: CMakeLists.txt  dump_thumbnails.cpp
tools/tail_probe/: CMakeLists.txt  tail_probe.cpp
tools/test_extract/: CMakeLists.txt  test_extract.cpp
web/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.smoke.json  vite.config.ts  vitest-setup.ts  vitest.config.ts
web/scripts/: backfill-en.mjs  backfill-missing-i18n.mjs  en-backfill.tsv  i18n-translate.mjs
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/__tests__/: interaction-smoke.test.tsx  pages-smoke.test.tsx
web/src/components/: AuthChip.tsx  (+33 more)
(+189 files in other folders)
